{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 76,
  "lineage": "f8641287-89d6-ca04-74d1-c0b873857849",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:416292882029:loadbalancer/app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3",
            "arn_suffix": "app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-learn-asg-terramino-lb-635732837.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:416292882029:loadbalancer/app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-learn-asg-terramino-lb",
            "security_groups": [
              "sg-073ebfc9768ff8867"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-030fd7d13fbc9aa5f"
              },
              {
                "subnet_id": "subnet-0985a91ec2fed5071"
              },
              {
                "subnet_id": "subnet-0e74f0c5ac9fab504"
              }
            ],
            "subnets": [
              "subnet-030fd7d13fbc9aa5f",
              "subnet-0985a91ec2fed5071",
              "subnet-0e74f0c5ac9fab504"
            ],
            "tags_all": {
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "vpc_id": "vpc-04272072e40da0012",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.terramino_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:416292882029:listener/app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3/814a04776fa8974f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:416292882029:targetgroup/learn-asg-terramino/a4d96c39e13d32d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:416292882029:listener/app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3/814a04776fa8974f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:416292882029:loadbalancer/app/alb-learn-asg-terramino-lb/f6308fd0c7e5c8c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terramino",
            "aws_lb_target_group.terramino",
            "aws_security_group.terramino_lb",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "terramino",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:416292882029:targetgroup/learn-asg-terramino/a4d96c39e13d32d4",
            "arn_suffix": "targetgroup/learn-asg-terramino/a4d96c39e13d32d4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:416292882029:targetgroup/learn-asg-terramino/a4d96c39e13d32d4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "learn-asg-terramino",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04272072e40da0012"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:security-group/sg-068563f36abb56aca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068563f36abb56aca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073ebfc9768ff8867"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-instance",
            "name_prefix": "",
            "owner_id": "416292882029",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "timeouts": null,
            "vpc_id": "vpc-04272072e40da0012"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terramino_lb",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terramino_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:security-group/sg-073ebfc9768ff8867",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073ebfc9768ff8867",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "learn-asg-terramino-lb",
            "name_prefix": "",
            "owner_id": "416292882029",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "timeouts": null,
            "vpc_id": "vpc-04272072e40da0012"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:internet-gateway/igw-05c3bf10147e18baa",
            "id": "igw-05c3bf10147e18baa",
            "owner_id": "416292882029",
            "tags": {
              "Name": "autoscaling-vpc"
            },
            "tags_all": {
              "Name": "autoscaling-vpc",
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "vpc_id": "vpc-04272072e40da0012"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c3bf10147e18baa",
            "id": "r-rtb-0942d5e29c3a5bfcd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0942d5e29c3a5bfcd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:route-table/rtb-0942d5e29c3a5bfcd",
            "id": "rtb-0942d5e29c3a5bfcd",
            "owner_id": "416292882029",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c3bf10147e18baa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "autoscaling-vpc-public"
            },
            "tags_all": {
              "Name": "autoscaling-vpc-public",
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "timeouts": null,
            "vpc_id": "vpc-04272072e40da0012"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dfc574f9d66e765",
            "route_table_id": "rtb-0942d5e29c3a5bfcd",
            "subnet_id": "subnet-0e74f0c5ac9fab504"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cb227cb8041d342",
            "route_table_id": "rtb-0942d5e29c3a5bfcd",
            "subnet_id": "subnet-0985a91ec2fed5071"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3e674fa5130c20f",
            "route_table_id": "rtb-0942d5e29c3a5bfcd",
            "subnet_id": "subnet-030fd7d13fbc9aa5f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:subnet/subnet-0e74f0c5ac9fab504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74f0c5ac9fab504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416292882029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-vpc-public-us-west-2a"
            },
            "tags_all": {
              "Name": "autoscaling-vpc-public-us-west-2a",
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "vpc_id": "vpc-04272072e40da0012"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:subnet/subnet-0985a91ec2fed5071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0985a91ec2fed5071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416292882029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-vpc-public-us-west-2b"
            },
            "tags_all": {
              "Name": "autoscaling-vpc-public-us-west-2b",
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "vpc_id": "vpc-04272072e40da0012"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:subnet/subnet-030fd7d13fbc9aa5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fd7d13fbc9aa5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "416292882029",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "autoscaling-vpc-public-us-west-2c"
            },
            "tags_all": {
              "Name": "autoscaling-vpc-public-us-west-2c",
              "source": "GoCloudEngineersAutoscalingDemo"
            },
            "vpc_id": "vpc-04272072e40da0012"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:416292882029:vpc/vpc-04272072e40da0012",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0482554f9da0bb6c8",
            "default_route_table_id": "rtb-08d49d28ee198f70d",
            "default_security_group_id": "sg-0d504c1de8ec8f527",
            "dhcp_options_id": "dopt-0bfa93f875f409a9a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04272072e40da0012",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d49d28ee198f70d",
            "owner_id": "416292882029",
            "tags": {
              "Name": "autoscaling-vpc"
            },
            "tags_all": {
              "Name": "autoscaling-vpc",
              "source": "GoCloudEngineersAutoscalingDemo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}